--- a/style.css
+++ b/style.css
@@ -373,7 +373,7 @@ body h2 {
 }
 
 #questions form {
-    margin-top: 60px;
+    margin-top: 130px;
 }
 
 #questions form input {
@@ -415,12 +415,10 @@ body h2 {
 
 #questions label {
     color: #777777;
-    font-family: Geometria;
     font-size: 12px;
     float: left;
-    text-align: left;
-    margin-left: 45px;
-    margin-top: 25px;
+    position: relative;
+    left: 100px;
 }
 
 #questions label div {
@@ -436,12 +434,15 @@ body h2 {
 #questions form input[type="submit"] {
     width: 190px;
     height: 40px;
-    margin-left: 75px;
     background-color: #FF4500;
     color: white;
     border-radius: 25px/25px;
     font-family: Montserrat;
     font-size: 14px;
+    float: left;
+    position: relative;
+    top: -20px;
+    left: -80px;
 }
 
 hr {
@@ -483,11 +484,15 @@ hr {
     min-height: 416px;
     border: 1px solid black;
     background-color: white;
-    margin-left: 510px;
+    margin-left: 520px;
     margin-top: 200px;
     position: fixed;
     top: 0px;
     z-index: -1;
+}
+
+#feedback h2 {
+    top: 5px;
 }
 
 #feedback div {
@@ -666,11 +671,11 @@ hr {
 }
 
 #pdf {
-    margin-top: 70px;
     font-family: Montserrat;
     font-size: 18px;
     position: relative;
     left: 440px;
+    top: 160px;
 }
 
 #pdf tr td {
@@ -690,6 +695,69 @@ hr {
     background: url(img/PDF@2x.png);
     background-repeat: no-repeat;
     float: left;
+}
+
+#content figure {
+    position: relative;
+    left: 41px;
+    font-family: Montserrat;
+    float: left;
+    width: 631px;
+    max-height: 2000px;
+    font-size: 14px;
+}
+
+#content figure figcaption:nth-of-type(1) {
+    width: 555px;
+    font-size: 20px;
+}
+
+#content hr {
+    position: relative;
+}
+
+#content figure:nth-of-type(1),
+#content figure:nth-of-type(2) {
+    top: 150px;
+}
+
+#content hr:nth-of-type(1) {
+    top: 200px;
+}
+
+#content figure:nth-of-type(3),
+#content figure:nth-of-type(4) {
+    top: 250px;
+}
+
+#content hr:nth-of-type(2) {
+    top: 300px;
+}
+
+#content figure:nth-of-type(5),
+#content figure:nth-of-type(6) {
+    top: 350px;
+}
+
+#content hr:nth-of-type(3) {
+    top: 400px;
+}
+
+#content figure:nth-of-type(7),
+#content figure:nth-of-type(8) {
+    top: 450px;
+}
+
+#content hr:nth-of-type(4) {
+    top: 500px;
+}
+
+#content figure:nth-of-type(9) {
+    top: 550px;
+}
+
+#content hr:nth-of-type(5) {
+    top: 600px;
 }
 
 footer {
@@ -732,7 +800,7 @@ footer a {
     color: white;
 }
 
-footer address {
+address {
     font-family: Montserrat;
     font-style: normal;
     font-family: 14px;
