--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
+
 body {
     font-family: Montserrat;
+    font-size: 14px;
     margin: 0 auto;
     width: 100%;
     max-width: 1519px;
@@ -46,7 +49,6 @@ header nav a div {
 }
 
 header nav a h1 {
-    font-weight: 400;
     font-size: 25px;
     float: left;
     position: relative;
@@ -127,10 +129,11 @@ header ul li:hover {
 }
 
 #carousel figcaption h1 {
+    width: 250px;
+    text-align: center;
     float: left;
     color: white;
     font-size: 40px;
-    font-weight: 400;
     border-bottom: 6px solid #FF4500;
 }
 
@@ -138,8 +141,6 @@ header ul li:hover {
     min-width: 690px;
     float: left;
     color: white;
-    font-size: 14px;
-    font-weight: 400;
 }
 
 #carousel figcaption button {
@@ -152,7 +153,6 @@ header ul li:hover {
     color: white;
     font-family: Montserrat;
     font-size: 14px;
-    font-weight: 400;
 }
 
 main ul li {
@@ -174,7 +174,6 @@ main {
 
 body h2 {
     font-size: 24px;
-    font-weight: 500;
     text-align: center;
     position: relative;
     top: 80px;
@@ -192,7 +191,6 @@ body h2 {
 }
 
 #advantages div {
-    font-size: 14px;
     display: flex;
     align-items: flex-end;
     float: left;
@@ -283,7 +281,6 @@ body h2 {
     background-color: #FF4500;
     border-radius: 25px/25px;
     text-align: center;
-    font-size: 14px;
     line-height: 40px;
     color: white;
     top: 200px;
@@ -301,15 +298,11 @@ body h2 {
 }
 
 #working h3 {
-    font-size: 14px;
     width: 327px;
-    font-weight: 500;
 }
 
 #working p {
-    width: 327px;
-    font-size: 14px;
-    font-weight: 300;
+    width: 331px;
     margin-right: 70px;
 }
 
@@ -346,7 +339,6 @@ body h2 {
 #penultimate p {
     padding-top: 180px;
     padding-left: 220px;
-    font-size: 14px;
 }
 
 #questions {
@@ -376,11 +368,11 @@ body h2 {
     left: 627px;
 }
 
-#questions form input[type="checkbox"] {
+#sending_data input[type="checkbox"] {
     display: none;
 }
 
-#questions label::before {
+#sending_data label::before {
     content: '';
     display: inline-block;
     width: 18px;
@@ -389,32 +381,26 @@ body h2 {
     vertical-align: middle;
 }
 
-#questions form input[type="checkbox"]:checked+label::before {
+#sending_data input[type="checkbox"]:checked+label::before {
     content: '\2714';
     color: white;
-    text-align: center;
     font-size: 20px;
     line-height: 19px;
 }
 
-#questions label {
+#sending_data label {
     color: #777777;
-    font-size: 12px;
     float: left;
     position: relative;
     left: 100px;
 }
 
-#questions label div {
+#sending_data label div {
     margin-top: -34px;
     margin-left: 35px;
 }
 
-#questions label div p {
-    font-size: 14px;
-}
-
-#questions form input[type="submit"] {
+#sending_data input[type="submit"] {
     width: 190px;
     height: 40px;
     background-color: #FF4500;
@@ -441,7 +427,6 @@ hr {
     background-color: white;
     position: relative;
     top: 155px;
-    font-size: 14px;
     color: #BFBFBF;
 }
 
@@ -453,7 +438,6 @@ hr {
     width: inherit;
     max-width: 1519px;
     min-width: 1423px;
-    height: 97%;
     background-color: black;
     opacity: .4;
     position: fixed;
@@ -475,6 +459,8 @@ hr {
 
 #feedback h2 {
     top: 5px;
+    font-size: 14px;
+    margin-top: 40px;
 }
 
 #feedback div {
@@ -483,14 +469,6 @@ hr {
     margin-right: 6px;
     margin-left: 10px;
     font-size: 19px;
-}
-
-#feedback h2 {
-    font-size: 14px;
-    font-weight: 500;
-    text-align: center;
-    margin-left: 15px;
-    margin-top: 40px;
 }
 
 #feedback form {
@@ -503,52 +481,21 @@ hr {
     height: 36px;
 }
 
-#feedback form input[type="checkbox"] {
-    display: none;
-}
-
-#feedback label::before {
-    content: '';
-    display: inline-block;
-    width: 18px;
-    height: 18px;
-    background-color: #FF4500;
-    vertical-align: middle;
-}
-
-#feedback form input[type="checkbox"]:checked+label::before {
-    content: '\2714';
-    color: white;
-    text-align: center;
-    font-size: 20px;
-    line-height: 19px;
-}
-
 #feedback label {
-    color: #777777;
-    font-size: 12px;
-    float: left;
     text-align: left;
-    margin-left: 45px;
-    margin-top: 25px;
+    top: 10px;
+    left: 45px;
 }
 
 #feedback label div {
     margin-top: -14px;
-}
-
-#feedback label div p {
+    margin-left: 15px;
     font-size: 12px;
 }
 
 #feedback form input[type="submit"] {
-    width: 190px;
-    height: 40px;
-    background-color: #FF4500;
-    color: white;
-    border-radius: 25px/25px;
-    font-family: Montserrat;
-    font-size: 14px;
+    top: 10px;
+    left: 90px;
 }
 
 #company {
@@ -565,13 +512,10 @@ hr {
 
 #company h4 {
     font-size: 20px;
-    font-weight: 400;
     width: 290px;
 }
 
 #company p {
-    font-size: 14px;
-    font-weight: 300;
     width: 290px;
 }
 
@@ -605,12 +549,10 @@ hr {
 #company2 h3 {
     max-width: 600px;
     font-size: 18px;
-    font-weight: 400;
 }
 
 #company2 p {
     max-width: 600px;
-    font-size: 14px;
 }
 
 #company2 figure {
@@ -679,7 +621,6 @@ hr {
     float: left;
     width: 631px;
     max-height: 2000px;
-    font-size: 14px;
 }
 
 #content figure figcaption:nth-of-type(1) {
